--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,12 +1,63 @@
 .main-container {
-  min-height: 100vh;
+  width: 80%;
+  margin: 0 auto;
+}
+.main-container .search-container {
+  margin-bottom: 20px;
+}
+.main-container .search-container .search-input {
+  border: none;
+  font-size: 1.2rem;
+  color: #ec4399;
+  background-color: black;
+  padding: 10px 20px;
+  width: 100%;
+  outline: none;
+  margin-bottom: 10px;
+}
+.main-container .search-container .search-input::placeholder {
+  color: #c73983;
+}
+.main-container .search-container .search-result {
+  color: white;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.main-container .search-container .search-result span {
+  color: #ec4399;
+  font-size: 1.2rem;
+}
+.main-container .main-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 .main-container .main-title {
   color: #ec4399;
   font-size: 2rem;
-  width: 80%;
   margin: 40px auto;
   padding: 10px 16px;
   border: 5px solid #ec4399;
   box-shadow: 0 0 20px #ec4399;
+}
+
+@media (max-width: 1600px) {
+  .main-container .main-content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 1200px) {
+  .main-container .main-content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 800px) {
+  .main-container .main-content {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .main-container .main-title {
+    font-size: 1.6rem;
+    text-align: center;
+  }
 }
