--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,21 +1,25 @@
 .header {
   width: 100%;
   background-color: #700e63;
+  align-items: center;
+}
+.header .header-content {
+  width: 80%;
+  padding: 10px 20px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
 }
-.header .logo {
+.header .header-content .logo {
   cursor: pointer;
   display: flex;
   align-items: center;
   gap: 5px;
 }
-.header .logo img {
+.header .header-content .logo img {
   width: 100px;
 }
-.header .navbar {
+.header .header-content .navbar {
   list-style-type: none;
   display: flex;
   gap: 20px;
