--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,6 +1,6 @@
 .main-container {
   width: 80%;
-  margin: 0 auto;
+  margin: 110px auto 0 auto;
 }
 .main-container .search-container {
   margin-bottom: 20px;
