--- a/src/pages/FilmeVerMais.css
+++ b/src/pages/FilmeVerMais.css
@@ -1,3 +1,20 @@
+.filme-title-ver-mais-content {
+  width: 100%;
+  margin-top: 110px;
+  margin-bottom: 40px;
+}
+.filme-title-ver-mais-content .filme-title-ver-mais {
+  width: 80%;
+  color: white;
+  font-size: 1.5rem;
+  margin: 0 auto;
+  padding: 10px 16px;
+  border: 2px solid #ec4399;
+  box-shadow: 0 0 10px #ec4399;
+}
+.filme-title-ver-mais-content .filme-title-ver-mais span {
+  color: #ec4399;
+}
 .filme-content-ver-mais {
   width: 80%;
   height: auto;
@@ -52,7 +69,7 @@
 }
 .voltar-ver-mais {
   width: 80%;
-  margin: 90px auto 0 auto;
+  margin: 0px auto 0 auto;
 }
 .voltar-ver-mais a {
   transition: 200ms;
