--- a/src/pages/FilmeVerMais.css
+++ b/src/pages/FilmeVerMais.css
@@ -94,3 +94,22 @@
         align-items: center;
     }
 }
+.filme-undefined {
+    position: fixed;
+    color: white;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+}
+.filme-undefined .filme-undefined-content {
+    font-size: 20px;
+}
+.filme-undefined a {
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
