--- a/src/components/filme/Filme.css
+++ b/src/components/filme/Filme.css
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #4a0a41;
 }
 .filme-content .cover img {
     width: 100%;
